--- a/movie-booking-and-listing-application/src/Makefile
+++ b/movie-booking-and-listing-application/src/Makefile
@@ -1,11 +1,17 @@
-run: ../bin/
-	cd .. && java -classpath build Main
+run: ../bin/ ../data/
+	cd .. && java -classpath bin Main
 
 ../bin/:
 	make build
 
+../data/:
+	make filldata
+	
 build:
 	javac -sourcepath ./ -d ../bin/ Main.java FillDatabaseMain.java TestDatabaseMain.java
 
+filldata: ../bin/
+	cd .. && java -classpath bin FillDatabaseMain
+	
 clean:
 	rm -rf ../bin/
